--- a/src/Views/Posts/Index.cshtml
+++ b/src/Views/Posts/Index.cshtml
@@ -1,11 +1,21 @@
 @model PostListViewModel
 
+@{
+    ViewData["Title"] = Model.Settings.Title;
+}
 
-<div class="jumbotron jumbotron-main text-white" style="background: url('images/@Model.Settings.Hero');" >
+<div class="jumbotron jumbotron-main text-white" style='@($"background:linear-gradient(to bottom, #343A40FF, #FB626033),url(\"{Context.Request.Scheme}://{Context.Request.Host}/images/{Model.Settings.Hero}\")")' >
+        
+        @if (!String.IsNullOrWhiteSpace(Model.Settings.HeroCredit)){
+            <div class="credit">
+                <i class="fa fa fa-image shadow"></i>
+                <div class="creditText">@Html.Raw(@Model.Settings.HeroCredit)</div>
+            </div>
+        }
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <p class="lead">
+                    <p class="lead convert-emoji">
                         @Html.Raw(@Model.Settings.Html)
                     </p>
                     </div>
@@ -15,11 +25,11 @@
             </div>
         </div>
 
-    <div class="container">
+    <div class="container jumbo-overlaid">
 
         @if (!String.IsNullOrWhiteSpace(Model.Tag))
         {
-            <div class="row mt-5 mb-5 lead text-center">
+            <div class="tag-display shadow mt-5 mb-5 lead text-center">
                 Showing posts for tag &nbsp;<span class="badge badge-pill badge-primary">@Model.Tag</span>
             </div>
         }
@@ -31,48 +41,25 @@
             </div>
         }
 
-        @for (int i = 0; i < @Model.Posts.Count(); i++)
-        {
-            var post = Model.Posts.ElementAt(i);
-
-            if(i == 0 || i % 3 == 0)
+        <div class="card-deck justify-content-center">
+            @foreach (var post in Model.Posts)
             {
-                    @:<div class="card-deck mt-5">
-                                }
+                @await Html.PartialAsync("_PostCard", post)
+            }
+        </div>
 
-                                @await Html.PartialAsync("_PostCard", post)
-
-                                // This will layout our cards in rows of three
-                                if(i == Model.Posts.Count()-1 || i % 3 == 2)
-                                {
-                                    // If it's the final card, add some invisible ones to pad
-                                    if(i == Model.Posts.Count()-1)
-                                    {
-                                        if(i % 3 == 1){
-                        @:<div class="card invisible"></div>
-                                        }
-                                        else if(i % 3 == 0)
-                                        {
-                        @:<div class="card invisible"></div>
-                        @:<div class="card invisible"></div>
-                                        }
-                                    }
-                    @:</div>
-                            }
-                        }
-
-                                        <div class="row mt-5">
-                                            <div class="col-sm-6">
-                                                @if (Model.CurrentPage<Model.PageCount)
-                                                            {
-                                                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
-                                                            }
-                                            </div>
-                                            <div class="col-sm-6 text-right">
-                                                @if (Model.CurrentPage > 1)
-                                                            {
-                                                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
-                                                            }
-                                            </div>
-                                        </div>
+        <div class="row mt-5">
+            <div class="col-sm-6">
+                @if (Model.CurrentPage<Model.PageCount)
+                {
+                    <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
+                }
+            </div>
+            <div class="col-sm-6 text-right">
+                @if (Model.CurrentPage > 1)
+                {
+                    <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
+                }
+            </div>
+        </div>
 </div>
