--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -59,8 +59,10 @@
 
     <header>
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" style="background-image:url('~/images/@Model.Settings.Navbar')">
-            <a asp-area="" asp-controller="Posts" asp-action="Index" asp-route-tag="" asp-route-pagenumber="1" class="navbar-brand"><img src='~/images/@Model.Settings.Logo' class="logo"/></a>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" style='@($"background-image:url(\"{Context.Request.Scheme}://{Context.Request.Host}/{Model.Settings.Navbar}\")")'>
+            <a asp-area="" asp-controller="Posts" asp-action="Index" asp-route-tag="" asp-route-pagenumber="1" class="navbar-brand">
+                @Model.Settings.Title
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
