--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -87,7 +87,7 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
 
 .fancy-card:hover {
     transform: translate3D(0,-1px,0) scale(1.03);
-    transition: all .4s ease;
+    transition: all .2s ease;
 }
 
 .card-deck .card {
@@ -161,6 +161,17 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
 .badge {
     background: linear-gradient(to right,#FB6260,#BC5090);
     text-transform: uppercase;
+}
+
+.btn-primary, .btn-primary:active, .btn-primary:visited {
+    background: linear-gradient(to right,#FB6260,#BC5090);
+    border: none;
+    color: #ffffff !important;
+}
+
+.btn-primary:hover {
+    transform: translate3D(0,-1px,0) scale(1.08);
+    transition: all .05s ease;
 }
 
 .badge-pill {
