--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
 
 
     <!-- Page Footer-->
-    <footer class="footer mt-auto py-3">
+    <footer class="footer mt-auto bg-darker pt-3">
         <div class="container">
             <span class="text-muted">Copyright © James Naylor 2019</span> 
             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
