--- a/src/Views/Home/About.cshtml
+++ b/src/Views/Home/About.cshtml
@@ -4,16 +4,34 @@
 }
 
 <div class="jumbotron jumbotron-main text-white" style='@($"background:linear-gradient(to bottom, #343A40FF, #FB626033),url(\"{Context.Request.Scheme}://{Context.Request.Host}/images/{Model.Settings.Hero}\")")' >
+    @if (!String.IsNullOrWhiteSpace(Model.Settings.HeroCredit)){
+            <div class="credit">
+                <i class="fa fa fa-image shadow"></i>
+                <div class="creditText">@Html.Raw(@Model.Settings.HeroCredit)</div>
+            </div>
+        }
 
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <p class="lead convert-emoji">
+                        <h1>About @Model.Settings.Title</h1>
+                    </p>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
 </div> 
 
 
-<div class="container jumbo-overlaid rounded shadow card post">
+<div class="container post">
 
     
     @foreach (var author in Model.Authors)
     {
-        <div class="row mb-5">
+        <div class="row my-5">
             <div class="col-sm-2">
                 
                 <img class="card-img rounded-circle shadow" src="../@author.ImageUrl" />
@@ -41,7 +59,7 @@
             </div>
 
             <div class="col-sm-10">
-                <h1>About @author.DisplayName</h1>
+                <h2>@author.DisplayName</h2>
                 @Html.Raw(author.Html)
             </div>
         </div>
