--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -14,15 +14,12 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 4.5rem;
     font-family: 'Montserrat', sans-serif !important;
-    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+    background: linear-gradient(120deg, #EDF2F7, #F7FAFC);
 }
 
 
-.bg-dark {
-
-    background-color: #343A40 !important;
-    background-image: url('../images/prism.png');
-    background-repeat: repeat;
+.bg-darker {
+    background-color: #E2E8F0;
 }
 
 .post {
@@ -49,6 +46,10 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
     color: inherit
 }
 
+.article {
+    padding-top: 1rem;
+}
+
 .article h2 {
     margin-top: 3.5rem;
 }
@@ -61,14 +62,23 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
     color: rgba(255,255,255,.75);
 }
 
+.index-bg {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
 .jumbotron-main {
     background-size: cover !important;  
     background-position: center !important; 
     background-repeat: no-repeat;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    height: 24rem;
+    height: 14rem;
     border-radius: 0 !important;
+    margin-bottom: 0rem !important;
+    background-color: #00000000;
 }
 
 @media (max-width: 460px) {
@@ -82,7 +92,7 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 3.5rem;
+    height: 4.5rem;
 }
 
 .fancy-card:hover {
@@ -99,7 +109,7 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
     overflow: hidden;
     margin-bottom: 2rem;
     width: 100%;
-    background-color: #f9fcff;
+    background: linear-gradient(120deg, #EDF2F7, #F7FAFC);
 }
 
 .card-img-wrapper {
@@ -125,17 +135,11 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
 }
 
 .card-footer {
-    background-color: #f9fcff;
     border-top: none;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-}
-
-.jumbo-overlaid {
-    margin-top: -14rem;
-    padding-top: 1.5rem;
 }
 
 .card-title {
@@ -152,7 +156,6 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
 }
 
 .tag-display {
-    background-color: #f9fcff;
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .25rem;
     padding: .25rem;
@@ -223,7 +226,7 @@ a.badge-primary:visited {
 
 .share, .share:active, .share:visited {
     color: #343A40;
-    padding: 0.5rem;
+    padding-left: 0.2rem;
 }
 
 .navbar .logo {
@@ -232,15 +235,19 @@ a.badge-primary:visited {
 
 @media (prefers-color-scheme: dark) {
     body {
-        background-image: linear-gradient(120deg, #343A40  0%, #161D25 100%);
+        background-image: linear-gradient(120deg, #1A202C, #2D3748);
         color: #f9fcff;
     }
 
-    .card, .card-footer, .tag-display {
-        background-color: #343A40;
+    .card, .card-body {
+        background-image: linear-gradient(120deg, #1A202C, #2D3748);
     }
 
-    .share, .share:active, .share:visited {
-        color: #f9fcff;
+    .bg-darker, .card-footer {
+        background-color: #4A5568;
+    }
+
+    .text-muted, .share, .share:active, .share:visited {
+        color: #f9fcff !important;
     }
 }
