--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
     <meta name="twitter:image" content='@ViewData["Image"]' />
     
     <!-- Metadata for Titlebar color -->
-    <meta name="theme-color" content="#343A40" />
-    <meta name="msapplication-navbutton-color" content="#343A40">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#343A40">
+    <meta name="theme-color" content="#1A202C" />
+    <meta name="msapplication-navbutton-color" content="#1A202C">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1A202C">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
