--- a/src/Views/Shared/_PostCard.cshtml
+++ b/src/Views/Shared/_PostCard.cshtml
@@ -1,6 +1,6 @@
 @model PostViewModel
 
-<div class="card mt-5 shadow fancy-card">
+<div class="card my-3 shadow fancy-card">
     <a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Post.Id">
     <div class="card-img-wrapper shadow">
         <img class="card-img-top img-fluid" src="@Model.Post.Image" />
