--- a/src/wwwroot/css/dracula.css
+++ b/src/wwwroot/css/dracula.css
@@ -14,7 +14,7 @@
     display: block;
     overflow-x: auto;
     padding: 0.5em;
-    background: #343A40;
+    background: #1A202C;
     border-radius: .3rem;
 }
 
