Change month format 📅

--- a/src/Views/Posts/Index.cshtml
+++ b/src/Views/Posts/Index.cshtml
@@ -51,9 +51,8 @@
                 @await Html.PartialAsync("_PostCard", post)
             }
         </div>
-    </div>
-    <div class="container">
-        <div class="row mt-5">
+    
+        <div class="row py-5">
             <div class="col-sm-6">
                 @if (Model.CurrentPage<Model.PageCount)
                 {
