--- a/src/Views/Shared/_PostCard.cshtml
+++ b/src/Views/Shared/_PostCard.cshtml
@@ -29,7 +29,7 @@
                         <span class="text-muted">@Model.AuthorName</span>
                     </div>
                     <div class="col-sm-5 my-auto text-right"> 
-                        <span class="text-muted">@(Model.Post.Date.ToString("d MMMM yy"))</span>
+                        <span class="text-muted">@(Model.Post.Date.ToString("d MMM yy"))</span>
                     </div>
                 </div>
             </div>
