--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -75,9 +75,9 @@
                         <a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">About</a>
                     </li>
                 </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <a href="#" class="search-btn"><i class="fas fa-search"></i></a>
+                <form id="postsform" asp-controller="Posts" asp-action="Index" method="get" class="form-inline mt-2 mt-md-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="filter">
+                    <a class="search-btn" onclick="return document.getElementById('postsform').submit()"><i class="fas fa-search"></i></a>
                 </form>
             </div>
         </nav>
