time-to-read min read instead of minutes read

--- a/src/Views/Shared/_PostCard.cshtml
+++ b/src/Views/Shared/_PostCard.cshtml
@@ -16,7 +16,6 @@
                 </a>
             }
         </div>
-        <div>@Model.Post.TimeToRead minute read</div>
         <h4 class="card-title"><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Post.Id">@Model.Post.Title</a></h4>                    
         <div>
             @Html.Raw(Model.Post.ShortContent)
@@ -31,7 +30,7 @@
                     </div>
                     <div class="col-sm-5 my-auto text-right"> 
                         <span class="text-muted">@(Model.Post.Date.ToString("d MMM yy"))</span>
-                        <div class="text-muted">@Model.Post.TimeToRead minute read</div>
+                        <div class="text-muted">@Model.Post.TimeToRead min read</div>
                     </div>
                     
                 </div>
