--- a/src/Views/Shared/_PostInfo.cshtml
+++ b/src/Views/Shared/_PostInfo.cshtml
@@ -14,7 +14,7 @@
             <a class="share" href='@($"https://www.linkedin.com/shareArticle?mini=true&amp;url={Context.Request.Scheme}%3A%2F%2F{Context.Request.Host}{Context.Request.Path}{Context.Request.QueryString}&amp;summary={Model.Post.Description}&amp;source={Context.Request.Scheme}%3A%2F%2F{Context.Request.Host}{Context.Request.QueryString}")'><i class="fab fa-linkedin-in"></i></a>
             <a class="share" href='@($"https://getpocket.com/edit?url={Context.Request.Scheme}%3A%2F%2F{Context.Request.Host}{Context.Request.Path}{Context.Request.QueryString}")'><i class="fab fa-get-pocket"></i></a> 
         </div>
-         <div><span class="text-muted">@Model.Post.TimeToRead minute read</span></div>
+         <div><span class="text-muted">@Model.Post.TimeToRead min read</span></div>
     </div>
 </div>
 <div class="row mt-4">
