--- a/src/Views/Posts/Index.cshtml
+++ b/src/Views/Posts/Index.cshtml
@@ -1,71 +1,68 @@
 @model PostListViewModel
 
 @{
-    ViewData["Title"] = Model.Settings.Title;
+	ViewData["Title"] = Model.Settings.Title;
 }
 
+<div class="index-bg" style='@($"background-image:url(\"{Context.Request.Scheme}://{Context.Request.Host}/images/{Model.Settings.Hero}\")")'>
 
-<div class="index-bg" style='@($"background-image:url(\"{Context.Request.Scheme}://{Context.Request.Host}/images/{Model.Settings.Hero}\")")' >
+	<div class="jumbotron jumbotron-main text-white" style="background:linear-gradient(to bottom, #1A202CFF, #1A202C77, #00000000);">
 
-<div class="jumbotron jumbotron-main text-white" style="background:linear-gradient(to bottom, #1A202CFF, #1A202C77, #00000000);">
-        
-        @if (!String.IsNullOrWhiteSpace(Model.Settings.HeroCredit)){
-            <div class="credit">
-                <i class="fa fa fa-image shadow"></i>
-                <div class="creditText">@Html.Raw(@Model.Settings.HeroCredit)</div>
-            </div>
-        }
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <p class="lead convert-emoji">
-                        @Html.Raw(@Model.Settings.Html)
-                    </p>
-                    </div>
-                </div>
+		@if (!string.IsNullOrWhiteSpace(Model.Settings.HeroCredit))
+		{
+			<div class="credit">
+				<i class="fa fa fa-image shadow"></i>
+				<div class="creditText">@Html.Raw(@Model.Settings.HeroCredit)</div>
+			</div>
+		}
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="lead convert-emoji">
+						@Html.Raw(@Model.Settings.Html)
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<div class="container">
 
-            </div>
-        </div>
+		@if (!string.IsNullOrWhiteSpace(Model.Tag))
+		{
+			<div class="tag-display shadow mt-5 mb-5 lead text-center">
+				Showing posts for tag &nbsp;<span class="badge badge-pill badge-primary">@Model.Tag</span>
+			</div>
+		}
 
-    <div class="container">
+		@if (Model.Posts.Count() == 0)
+		{
+			<div class="row mt-5 lead text-center">
+				Nothing to see here!
+			</div>
+		}
+	</div>
+	<div class="container container-cards">
+		<div class="card-deck justify-content-center">
+			@foreach (var post in Model.Posts)
+			{
+				@await Html.PartialAsync("_PostCard", post)
+			}
+		</div>
 
-        @if (!String.IsNullOrWhiteSpace(Model.Tag))
-        {
-            <div class="tag-display shadow mt-5 mb-5 lead text-center">
-                Showing posts for tag &nbsp;<span class="badge badge-pill badge-primary">@Model.Tag</span>
-            </div>
-        }
-
-        @if (Model.Posts.Count() == 0)
-        {
-            <div class="row mt-5 lead text-center">
-                Nothing to see here!
-            </div>
-        }
-    </div>
-    <div class="container container-cards">
-        <div class="card-deck justify-content-center">
-            @foreach (var post in Model.Posts)
-            {
-                @await Html.PartialAsync("_PostCard", post)
-            }
-        </div>
-    
-        <div class="row py-5">
-            <div class="col-sm-6">
-                @if (Model.CurrentPage<Model.PageCount)
-                {
-                    <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
-                }
-            </div>
-            <div class="col-sm-6 text-right">
-                @if (Model.CurrentPage > 1)
-                {
-                    <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
-                }
-            </div>
-        </div>
-</div>
-
+		<div class="row py-5">
+			<div class="col-sm-6">
+				@if (Model.CurrentPage < Model.PageCount)
+				{
+					<a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
+				}
+			</div>
+			<div class="col-sm-6 text-right">
+				@if (Model.CurrentPage > 1)
+				{
+					<a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
+				}
+			</div>
+		</div>
+	</div>
 </div>
