#19 Updated privacy policy page to pull content from settings.

--- a/src/Views/Home/Privacy.cshtml
+++ b/src/Views/Home/Privacy.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
 	ViewData["Title"] = "Privacy";
+	ViewData["Privacy"] = Model.Settings.Privacy;
 }
 <div class="container">
 	<h1 class="mt-5">@ViewData["Title"]</h1>
-	<p>Use this page to detail your site's privacy policy.</p>
+	<p>@ViewData["Privacy"]</p>
 </div>
