Customise copywrite string #20

--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
 	<!-- Page Footer-->
 	<footer class="footer mt-auto bg-darker pt-3">
 		<div class="container">
-			<span class="text-muted">Copyright © James Naylor 2019</span>
+			<span class="text-muted">"Copyright © @Model.Settings.CopyRight  @DateTime.Now.Year"</span>
 			<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 		</div>
 	</footer>
